# drug_repo

./: README.md  hello.py  pyproject.toml
src/drug_repo.egg-info/: PKG-INFO  SOURCES.txt
src/drupo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
