[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drupo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "torch-geometric>=2.6.1",
    "torch>=2.5.1",
]



[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-dir]
"" = "src" ## this is to source data from package, this this data would be within this source folder

